[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "numpy==1.24.4",
    "opencv-python==4.8.1.78",
    "pillow==10.1.0",
    "pytesseract==0.3.10",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
]
